--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="error_message">An unknown error occurred</string>
     <string name="error_get_categories">Failed to retrieve categories</string>
     <string name="error_get_products">Failed to retrieve products</string>
+
+    <string name="onboarding_1">Feel the magic with our lingerie brand</string>
+    <string name="onboarding_2">Your body deserves comfort</string>
+    <string name="onboarding_3">Willing to change society, start from your underwear</string>
+    <string name="onboarding_4">The joy of fashion that a girl experiences every day</string>
+    <string name="onboarding_5">Your favorite lingerie is here</string>
+    <string name="onboarding_next">Next</string>
 </resources>
