Added profile screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,19 @@
 
     <string name="in_development">Feature is in development</string>
     <string name="retry">Retry</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
     <string name="categories_title">Categories</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_favorites">Favorites</string>
+    <string name="menu_search">Search</string>
     <string name="menu_cart">Cart</string>
     <string name="menu_profile">Profile</string>
 
     <string name="item_product_button_buy">Buy now</string>
 
-    <string name="error_message">An unknown error occurred</string>
+    <string name="error_unknown">An unknown error occurred</string>
     <string name="error_get_categories">Failed to retrieve categories</string>
     <string name="error_get_products">Failed to retrieve products</string>
     <string name="error_phone_number_is_null">Phone number is empty</string>
@@ -23,6 +25,7 @@
     <string name="error_wrong_sms_code">Wrong SMS code</string>
     <string name="error_get_profile">Failed to retrieve profile</string>
     <string name="error_update_profile">Failed to update profile</string>
+    <string name="error_log_out">Failed to log out</string>
 
     <string name="onboarding_1">Feel the magic with our lingerie brand</string>
     <string name="onboarding_2">Your body deserves comfort</string>
@@ -45,4 +48,14 @@
     <string name="sign_up_hint_name">name</string>
     <string name="sign_up_hint_surname">surname</string>
     <string name="sign_up_done">Done</string>
+
+    <string name="profile_guest">Guest</string>
+    <string name="profile_full_name_template">%s %s</string>
+    <string name="profile_favorites">Favorites</string>
+    <string name="profile_orders">Orders</string>
+    <string name="profile_log_out">Log Out</string>
+    <string name="profile_log_in">Log In</string>
+    <string name="profile_about">About app</string>
+    <string name="profile_log_out_confirmation_message">Are you sure you want to log out?</string>
+    <string name="profile_edit">Edit</string>
 </resources>
