Added discount info to product items and to the product card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="menu_profile">Profile</string>
 
     <string name="item_product_button_buy">Buy now</string>
+    <string name="item_product_price_with_discount_template"><![CDATA[%s <font color=#bbbbbb><del>%s</del></font>]]></string>
 
     <string name="error_unknown">An unknown error occurred</string>
     <string name="error_get_categories">Failed to retrieve categories</string>
@@ -68,6 +69,7 @@
     <string name="product_card_empty_photos">Sorry\nThere are no photos for the product</string>
     <string name="product_card_color_placeholder"><![CDATA[Color <font color=#bbbbbb>%s</font>]]></string>
     <string name="product_card_add_to_cart">Add to cart</string>
+    <string name="product_card_discount_template" translatable="false">-%.0f%%</string>
 
     <string name="home_sale_products_title">Sale</string>
     <string name="home_popular_products_title">Popular</string>
