Added fast addition to the cart

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,6 +131,8 @@
     <string name="cart_checkout">Checkout</string>
     <string name="cart_total">Total:</string>
 
+    <string name="add_to_cart_title">Add to the cart</string>
+
     <string name="contacts_version_placeholder">v%s</string>
     <string name="contacts_phone">Call us</string>
     <string name="contacts_email">Send us an email</string>
