--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,11 +44,14 @@
     <string name="error_add_to_cart">Failed to add product to the cart</string>
     <string name="error_remove_from_cart">Failed to remove product from the cart</string>
     <string name="error_get_cart_items">Failed to fetch cart items</string>
+    <string name="error_get_orders">Failed to fetch orders</string>
     <string name="error_get_products_page">Failed to retrieve additional products</string>
+    <string name="error_checkout">Failed to create the order</string>
     <string name="error_no_categories">The list of categories is empty</string>
     <string name="error_no_favorites">The list of favorites is empty</string>
     <string name="error_no_products">The list of products is empty</string>
     <string name="error_no_cart_items">The cart is empty</string>
+    <string name="error_no_orders">The list of orders is empty</string>
 
     <string name="onboarding_1">Feel the magic with our lingerie brand</string>
     <string name="onboarding_2">Your body deserves comfort</string>
@@ -130,6 +133,7 @@
     <string name="cart_title">Cart</string>
     <string name="cart_checkout">Checkout</string>
     <string name="cart_total">Total:</string>
+    <string name="cart_order_created">Your order has now been created</string>
 
     <string name="add_to_cart_title">Add to the cart</string>
 
@@ -142,4 +146,15 @@
     <string name="view_input_range_hint">0</string>
 
     <string name="add_to_cart_success">Successfully added to cart</string>
+
+    <string name="orders_title">Orders</string>
+
+    <string name="order_title_placeholder">Order %s</string>
+    <string name="order_previews_more_placeholder">+%d</string>
+
+    <string name="order_status_pending">Pending</string>
+    <string name="order_status_in_progress">In progress</string>
+    <string name="order_status_awaiting">Awaiting</string>
+    <string name="order_status_completed">Completed</string>
+    <string name="order_status_canceled">Canceled</string>
 </resources>
