Refactored appearance of the demo screen

--- a/app/src/demo/res/values/strings.xml
+++ b/app/src/demo/res/values/strings.xml
@@ -10,4 +10,6 @@
 
     <string name="demo_name">Jane</string>
     <string name="demo_surname">Doe</string>
+
+    <string name="profile_demo_presets">Demo presets</string>
 </resources>
